<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arbench_part_publisher</name>
  <version>0.2.0</version>
  <description>The arbench_part_publisher package</description>
  <maintainer email="mathias.arbo@ntnu.no">Mathias Hauan Arbo</maintainer>
  <maintainer email="movefasta@dezcom.org">Igor Brylyov</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://www.github.com/mahaarbo/arbench_part_publisher</url>

  <exec_depend>arbench_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
